# rt

./: .envrc  .gitignore  .rt.toml.example  Cargo.toml  README.md  flake.nix
agrm-cache/: Cargo.toml
agrm-cache/src/: error.rs  lib.rs
agrm-cmd/: Cargo.toml
agrm-cmd/src/: cli.rs  clone.rs  helper.rs  lib.rs  manager.rs
agrm-core/: Cargo.toml
agrm-core/src/: git.rs  lib.rs  repo.rs  tmp.rs
agrm-settings/: Cargo.toml
agrm-settings/src/: global.rs  lib.rs  local.rs
src/: agrm.rs  cli.rs  cmd.rs  config.rs  consts.rs  exec.rs  git.rs  global.rs  integrations.rs  logging.rs  main.rs  repository.rs
src/agrm/: logger.rs  mod.rs  settings.rs
src/cmd/: agrm.rs  cli.rs  clone.rs  mod.rs
src/commands/: clone.rs  delete.rs  help.rs  mod.rs  tree.rs
src/commands/worktree/: add.rs  delete.rs  list.rs  mod.rs
src/config/: file.rs  mod.rs  model.rs
src/integrations/: autojump.rs  mod.rs  zoxide.rs
src/path/: mapping.rs  mod.rs  remote.rs
src/settings/: global.rs  mod.rs
