[package]
name = "agrm"
version = "0.1.0"
edition = "2021"
description = "A Git Repositories Manager."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "cargo"] }
agrm-cmd = { version = "0.1.0", path = "agrm-cmd" }
config = "0.13.3"
serde = { version = "1.0.152", features = ["derive"] }
agrm-settings = { version = "0.1.0", path = "agrm-settings" }
agrm-cache = { version = "0.1.0", path = "agrm-cache" }
