[package]
name = "agrm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
regex = "1.10.6"
serde = { version = "1.0.207", features = ["derive"] }
tempdir = "0.3.7"
toml = "0.8.19"
